--- a/system/templates/items/lineage-config.hbs
+++ b/system/templates/items/lineage-config.hbs
@@ -1,17 +1,8 @@
 <form class="{{cssClass}} flexcol" autocomplete="off">
 
     {{!-- Sheet Header --}}
-    <header class="sheet-header flexrow">
-        <img class="profile" src="{{document.img}}" title="{{document.name}}" data-edit="img"/>
-        <h1 class="title">
-            <input name="name" type="text" value="{{document.name}}" placeholder="Race Name"/>
-        </h1>
-        <div class="form-group">
-            <div class="form-fields">
-                {{colorPicker name="system.color" value=document.system.color}}
-            </div>
-        </div>
-    </header>
+    {{> (lookup partials 'itemHeader') document=document allowsColor=true }}
+
 
     {{!-- Description Tab --}}
     <section class="sheet-body">
